--- a/html-css/desafios/d010/estilo/style.css
+++ b/html-css/desafios/d010/estilo/style.css
@@ -1,25 +1,51 @@
+@charset 'UTF-8';
+
 @font-face {
-    font-family: 'idroid';
-    src: url('fontes/idroid.otf') format('opentype');
+    font-family: 'Android';
+    src: url('../fontes/idroid.otf') format('opentype');
+    font-style: normal;
+    font-weight: normal;
+
+    font-family: 'Bebas Neue';
+    src: url('../fontes/BebasNeue-Regular.ttf') format('truetype');
     font-style: normal;
     font-weight: normal;
 }
 
+:root {
+    --cor0: #c5ebd6;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e;
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue', 'cursive';
+    --fonte-android: 'Android', 'cursive';
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
 body {
-    background-color: #a7f5ba;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--cor0);
+    font-family: var(--fonte-padrao);
 }
 
 header {
-    background-image: linear-gradient(to bottom, #85fc99, #448d50, #2b4d36);
+    background-image: linear-gradient(to bottom, var(--cor1), var(--cor3), var(--cor5));
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.555);
+    color: white;
     padding: 5px;
     height: 150px;
+    width: 100%;
 }
 
 header > h1 {
-    color: white;
+    font-family: var(--fonte-destaque);
     font-size: 2em;
     font-weight: bold;
     text-align: center;
@@ -29,13 +55,13 @@ header > h1 {
 }
 
 header > p {
-    color: white;
     text-align: center;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.555);
     margin: 20px;
 }
 
 nav {
+    background-color: var(--cor5);
     margin: 30px 0px 0px 10px;
 
 }
@@ -48,11 +74,10 @@ nav > a {
 }
 
 nav > a:hover {
-    background-color: #85fc99;
+    background-color: var(--cor1);
     border-radius: 5px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.301);
-    color: #2b4d36;
-    margin: 0px;
+    color: var(--cor5);
     padding: 5px;
     transition: 0.2s;
 }
@@ -63,32 +88,34 @@ main {
     border-radius: 0px 0px 10px 10px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.555);
     margin: 0px 150px 10px 150px;
+    max-width: 600px;
+    min-width: 280px;
     padding: 10px 0px 10px 0px;
     text-align: justify;
 }
 
-main > p {
+main> article > p {
     text-indent: 30px;
     margin: 20px;
 }
 
-main > p > a {
-    color: #2b4d36;
+main > article> p > a {
+    color: var(--cor5);
     font-weight: bold;
     text-decoration: none;
 }
 
-.titulo_android--principal {
-    color: #2b4d36;
-    font-family: 'idroid';
+.titulo_Android--principal {
+    color: var(--cor5);
+    font-family: var(--fonte-android);
     font-size: 1.5em;
     padding: 10px;
 }
 
-.titulo_android--secundario {
-    color: #2b4d36;
-    background-image: linear-gradient(to right, #a7f5ba, white);
-    font-family: 'idroid';
+.titulo_Android--secundario {
+    color: var(--cor5);
+    background-image: linear-gradient(to right, #85E1B5, white);
+    font-family: var(--fonte-android);
     margin-left: 10px;
     padding: 5px;
 }
@@ -100,7 +127,7 @@ img {
 
 div#video {
     align-items: center;
-    background-color: #2b4d36;   
+    background-color: var(--cor5);   
 }
 
 iframe {
@@ -109,7 +136,7 @@ iframe {
 }
 
 div#lista {
-    background-color: #c7ffd5;
+    background-color: var(--cor1);
     border-radius: 10px;
     margin: 10px;
 }
@@ -123,23 +150,22 @@ div#lista {
 }
 
 div > h3 {
-    background-color: #2b4d36;
+    background-color: var(--cor5);
     border-radius: 10px 10px 0px 0px;
     color: white;
     padding: 8px;
 }
 
 div > p > a {
-    color: #2b4d36;
+    color: var(--cor5);
     font-weight: bold;
     text-decoration: none;
 }
 
 
 footer {
-    background-color: #2b4d36;
+    background-color: var(--cor5);
     color: white;
-    margin: 0px;
     padding: 5px;
     text-align: center;
 }
