--- a/html-css/desafios/d010/estilo/style.css
+++ b/html-css/desafios/d010/estilo/style.css
@@ -36,61 +36,63 @@ body {
 }
 
 header {
-    background-image: linear-gradient(to bottom, var(--cor1), var(--cor3), var(--cor5));
+    background-image: linear-gradient(to bottom, var(--cor3) , var(--cor5));
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.555);
     color: white;
-    padding: 5px;
-    height: 150px;
+    padding-top: 40px;
+    min-height: 150px;
+    text-align: center;
     width: 100%;
 }
 
 header > h1 {
     font-family: var(--fonte-destaque);
-    font-size: 2em;
+    font-size: 3em;
     font-weight: bold;
-    text-align: center;
+    margin: 0px 0px 30px 0;
     text-transform: uppercase;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.555);
-    margin: 20px 0px 30px 0;
 }
 
 header > p {
-    text-align: center;
+    font-size: 1.2em;
+    margin: auto;
+    padding: 0px 10px 0px 10px;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.555);
-    margin: 20px;
+    max-width: 500px;
 }
 
 nav {
     background-color: var(--cor5);
-    margin: 30px 0px 0px 10px;
-
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.301);
+    padding:10px;
 }
 
 nav > a {
-    color: rgb(255, 255, 255);
+    color: #ffffff;
     font-weight: bold;
-    margin-right: 10px;
+    padding: 10px;
     text-decoration: none;
+    transition-duration: .5s;
 }
 
 nav > a:hover {
-    background-color: var(--cor1);
+    background-color: var(--cor2);
     border-radius: 5px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.301);
     color: var(--cor5);
-    padding: 5px;
-    transition: 0.2s;
 }
 
 main {
     align-items: center;
     background-color: white;
     border-radius: 0px 0px 10px 10px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.555);
-    margin: 0px 150px 10px 150px;
-    max-width: 600px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.555);
+    margin: auto;
+    margin-bottom: 30px;
+    max-width: 1000px;
     min-width: 280px;
-    padding: 10px 0px 10px 0px;
+    padding: 20px;
     text-align: justify;
 }
 
@@ -120,9 +122,14 @@ main > article> p > a {
     padding: 5px;
 }
 
+main img.pequena {
+    width: 50%;
+}
+
 img {
     display: block;
     margin: auto;
+    width: 100%;
 }
 
 div#video {
