--- a/html-css/desafios/d012/style.css
+++ b/html-css/desafios/d012/style.css
@@ -15,6 +15,7 @@
 
     --fonte-titulo: 'Passion One', 'cursive';
     --fonte-poema: 'Sriracha', 'cursive';
+    --fonte-normal: Arial, Helvetica, sans-serif
 }
 
 * {
@@ -35,12 +36,12 @@ header {
 
 #titulo {
     font-family: var(--fonte-titulo);
-    font-size: 4em;
+    font-size: 10vw;
     font-variant: small-caps;
 }
 
 header p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--fonte-normal);
     padding-bottom: 10px;
 }
 
@@ -56,7 +57,7 @@ a:hover {
 
 section {
     font-family: var(--fonte-poema);
-    font-size: 1.5em;
+    font-size: 3.5vw;
     line-height: 2em;
     padding: 10vh 30px;
 }
@@ -72,13 +73,14 @@ section {
     background-size: cover;
     background-attachment: fixed;
     color: var(--branco);
+    padding-left: 0px;
 }
 
 .container-paragrafos1 {
     background-color: #1414145d;
-    border-radius: 5px;
-    padding: 20px;
-    width: 400px;
+    border-radius: 0px 5px 5px 0px;
+    display: inline-block;
+    padding: 30px;
 }
 
 .container-imagem2 {
@@ -87,14 +89,14 @@ section {
     background-size: cover;
     background-attachment: fixed;
     color: var(--branco);
-    padding: 100px 0px;
+    padding-left: 0px;
 }
 
 .container-paragrafos2 {
     background-color: #1414145d;
-    border-radius: 5px;
-    padding: 20px;
-    width: 400px;
+    border-radius: 0px 5px 5px 0px;
+    display: inline-block;
+    padding: 30px;
 
 }
 
