--- a/html-css/desafios/d012/style.css
+++ b/html-css/desafios/d012/style.css
@@ -57,7 +57,7 @@ a:hover {
 
 section {
     font-family: var(--fonte-poema);
-    font-size: 3.5vw;
+    font-size: 4vw;
     line-height: 2em;
     padding: 10vh 30px;
 }
@@ -67,36 +67,46 @@ section {
     box-shadow: 15px 15px 5px black;  
 }
 
+.container-imagem {
+
+}
+
 .container-imagem1 {
     background-image: url(imagens/background001.jpg);
+    background-attachment: fixed;
+    background-position: right center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.700);
     color: var(--branco);
     padding-left: 0px;
 }
 
 .container-paragrafos1 {
-    background-color: #1414145d;
+    background-color: #141414a4;
     border-radius: 0px 5px 5px 0px;
     display: inline-block;
     padding: 30px;
+    text-shadow: 1.5px 1.5px 0px black;
 }
 
 .container-imagem2 {
     background-image: url(imagens/background002.jpg);
+    background-attachment: fixed;
+    background-position: right center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.700);
     color: var(--branco);
     padding-left: 0px;
 }
 
 .container-paragrafos2 {
-    background-color: #1414145d;
+    background-color: #141414a4;
     border-radius: 0px 5px 5px 0px;
     display: inline-block;
     padding: 30px;
+    text-shadow: 1.5px 1.5px 0px black;
 
 }
 
