--- a/html-css/desafios/d015/styles/style.css
+++ b/html-css/desafios/d015/styles/style.css
@@ -1,21 +1,36 @@
+@charset "UTF-8";
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    height: 100vh;
+    width: 90vw;
+}
+
 body {
     background-image: url("../assets/imagens/fundo-madeira.jpg");
     background-attachment: fixed;
+    background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 main {
-    
+    height: 100vh;
+    position: relative;
 }
 
-#iphone {
+section#iphone {
+    background: url('../assets/imagens/frame-iphone.png') no-repeat;
+    height: 627px;
+    left: 50%;
     position: absolute;
     top: 50%;
-    left: 50%;
     transform: translate(-50%, -50%);
-    height: 550px;
-    width: 250px;
+    width: 311px;
 }
 
 iframe#tela {
