--- a/html-css/desafios/d015/styles/style.css
+++ b/html-css/desafios/d015/styles/style.css
@@ -36,12 +36,11 @@ section#iphone {
 iframe#tela {
     display: block;
     margin: auto;
-    height: 420px;
-    width: 215px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height: 471px;
+    width: 269px;
+    position: relative;
+    top: 80px;
+    left: 23px;
 
 }
 
