--- a/html-css/desafios/d015/styles/style.css
+++ b/html-css/desafios/d015/styles/style.css
@@ -7,7 +7,7 @@
 
 html, body {
     height: 100vh;
-    width: 90vw;
+    width: 100vw;
 }
 
 body {
@@ -36,31 +36,31 @@ section#iphone {
 iframe#tela {
     display: block;
     margin: auto;
-    height: 471px;
+    height: 472px;
     width: 269px;
     position: relative;
     top: 80px;
-    left: 23px;
+    left: 0px;
 
 }
 
 .logos-container {
     display: flex;
     flex-direction: column;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    height: 200px;
+    text-align: right;
 }
 
 .logos {
     border-radius: 100%;
-    box-shadow: 2px 2px 2px #0000008c; 
-    margin-bottom: 15px;
-    width: 40px;
+    box-shadow: 2px 2px 3px #000000c4; 
+    box-sizing: border-box;
+    margin: 15px;
+    width: 50px;
     transition: .2s;
 }
 
 .logos:hover {
     transform: scale(1.2);
+    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.5);
+    border: 2px solid rgba(255, 255, 255, 0.795);
 }
