--- a/html-css/exercicios/ex026/mq005/estilos/style.css
+++ b/html-css/exercicios/ex026/mq005/estilos/style.css
@@ -1,5 +1,63 @@
 @charset "UTF-8";
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
+
 body, html {
     background-color: lightgray;
 }
+
+header {
+    background-color: #9b9b9b;
+}
+
+header > h1 {
+    padding: 10px;
+    text-align: center;
+}
+
+nav {
+    display: block;
+}
+
+nav > ul {
+    list-style-type: none;
+}
+
+nav a {
+    background-color: rgb(51, 51, 51);
+    border-top: 2px solid #cacaca;
+    color: white;
+    display: block;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #9b9b9b;
+    color: black;
+    font-weight: bold;
+}
+
+main {
+    background-color: white;
+    border-radius: 10px;
+    margin: auto;
+    margin-top: 10px;
+    padding: 10px;
+    width: 90vw;
+}
+
+article > h2 {
+    padding-bottom: 20px;
+}
+
+article > p {
+    margin-bottom: 20px;
+    text-align: justify;
+    text-indent: 20px;
+} 
